--- a/lgebd/makefile
+++ b/lgebd/makefile
@@ -8,4 +8,4 @@ $(F)lgebd$(O)     : $(I)area.hpp $(I)auto.hpp $(I)bitrange.hpp $(I)bytes.hpp  \
 	          $(I)kernwin.hpp $(I)lines.hpp $(I)llong.hpp               \
 	          $(I)loader.hpp $(I)nalt.hpp $(I)name.hpp $(I)netnode.hpp  \
 	          $(I)offset.hpp $(I)pro.h $(I)segment.hpp $(I)srarea.hpp   \
-	          $(I)ua.hpp $(I)xref.hpp ../idaldr.h
+	          $(I)ua.hpp $(I)xref.hpp ../idaldr.h lgebd.hpp
